Fixes a regression in which the left side showed when it should not on mobile view

--- a/styleguide/source/assets/scss/03-organisms/_resource-tabs.scss
+++ b/styleguide/source/assets/scss/03-organisms/_resource-tabs.scss
@@ -1,6 +1,10 @@
 .ama__resource-tabs {
-  @include gutter($margin-top-half...);
   height: 100%;
+  border: 0 !important;
+
+  @include breakpoint($bp-small) {
+    @include gutter($margin-top-half...);
+  }
 }
 
 .ama__resource-tabs__nav.ui-tabs-nav {
